--- a/index.html
+++ b/index.html
@@ -284,6 +284,10 @@
                 <a href="#">| Aaj Entertainment &nbsp;</a>
                 <a href="#">| Business Recorder &nbsp;</a>
             </div>
+            <div class="develop">
+                <img src="./Images/Taha1.jpeg" alt="">
+                <a href="https://mtaha000.github.io/My-Portfolio/">Developing By Taha Abid</a>
+            </div>
         </div>
     </footer>
 </body>
